create works| add AudioRingCache
Signed-off-by: hezhiqiang19@huawei.com <hezhiqiang19@huawei.com>
Change-Id: I0713fed1253bdd745688fb71bcbd3cadcd742c51

--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -44,6 +44,7 @@ ohos_shared_library("audio_common") {
 
   sources = [
     "common/src/audio_process_config.cpp",
+    "common/src/audio_ring_cache.cpp",
     "common/src/linear_pos_time_model.cpp",
     "common/src/oh_audio_buffer.cpp",
   ]
