--- a/services/audio_policy/BUILD.gn
+++ b/services/audio_policy/BUILD.gn
@@ -24,6 +24,8 @@ group("audio_policy_packages") {
     ":audio_dump",
     ":audio_effect_config",
     ":audio_interrupt_policy_config",
+    ":audio_strategy_router",
+    ":audio_usage_strategy",
     ":audio_policy_init",
     ":audio_policy_service",
     ":audio_volume_config",
@@ -154,6 +156,8 @@ ohos_shared_library("audio_policy_service") {
     "server/src/audio_volume_key_event_callback_proxy.cpp",
     "server/src/service/audio_device_manager.cpp",
     "server/src/service/audio_policy_service.cpp",
+    "server/src/service/config/audio_strategy_router_parser.cpp",
+    "server/src/service/config/audio_usage_strategy_parser.cpp",
     "server/src/service/config/audio_device_parser.cpp",
     "server/src/service/config/audio_focus_parser.cpp",
     "server/src/service/config/audio_volume_parser.cpp",
@@ -268,6 +272,22 @@ ohos_shared_library("audio_policy_service") {
 
 ohos_prebuilt_etc("audio_interrupt_policy_config") {
   source = "server/config/audio_interrupt_policy_config.xml"
+
+  subsystem_name = "multimedia"
+  relative_install_dir = "audio"
+  part_name = "audio_framework"
+}
+
+ohos_prebuilt_etc("audio_strategy_router") {
+  source = "server/config/audio_strategy_router.xml"
+
+  subsystem_name = "multimedia"
+  relative_install_dir = "audio"
+  part_name = "audio_framework"
+}
+
+ohos_prebuilt_etc("audio_usage_strategy") {
+  source = "server/config/audio_usage_strategy.xml"
 
   subsystem_name = "multimedia"
   relative_install_dir = "audio"
