--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -153,6 +153,7 @@ ohos_shared_library("audio_client") {
     "init:libbegetutil",
     "ipc:ipc_single",
     "power_manager:powermgr_client",
+    "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
 
