Add sasdk without delete old sasdk
Signed-off-by: liyuhang <liyuhang24@huawei.com>
Change-Id: I5720c762804c0d97e8af9978ad3fc47ad7b07b99

--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -312,6 +312,42 @@ ohos_shared_library("audio_service") {
   part_name = "audio_framework"
 }
 
+ohos_shared_library("audio_sasdk") {
+  stack_protector_ret = true
+  sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+  }
+
+  install_enable = true
+  sources = [ "client/src/audio_sasdk.cpp" ]
+
+  include_dirs = [
+    "../../interfaces/inner_api/native/audiocommon/include",
+    "../../interfaces/inner_api/native/audiosasdk/include",
+  ]
+
+  deps = [
+    ":audio_common",
+    "../audio_policy:audio_policy_client",
+  ]
+
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
+  ]
+
+  version_script = "../../audio_framework.versionscript"
+  innerapi_tags = [
+    "platformsdk",
+    "sasdk",
+  ]
+
+  subsystem_name = "multimedia"
+  part_name = "audio_framework"
+}
+
 group("audio_service_test_packages") {
   deps = [
     ":audio_hdi_device_test",
