--- a/frameworks/native/audioeffect/BUILD.gn
+++ b/frameworks/native/audioeffect/BUILD.gn
@@ -57,6 +57,8 @@ ohos_shared_library("audio_effect") {
     "hilog:libhilog",
     "ipc:ipc_single",
     "sensor:sensor_interface_native",
+    "drivers_interface_audio:effect_idl_headers",
+    "drivers_interface_audio:libeffect_proxy_1.0",
   ]
 
   version_script = "../../../audio_framework.versionscript"
