--- a/services/audio_policy/BUILD.gn
+++ b/services/audio_policy/BUILD.gn
@@ -54,6 +54,7 @@ config("audio_policy_public_config") {
     "server/include/service/listener",
     "server/include/service/manager",
     "server/include/service/routers",
+    "server/include/service/spatialization",
     "../audio_service/client/include",
     "../audio_service/common/include",
     "../../frameworks/native/audiorenderer/include",
@@ -175,6 +176,8 @@ ohos_shared_library("audio_policy_service") {
     "server/src/service/routers/public_priority_router.cpp",
     "server/src/service/routers/stream_filter_router.cpp",
     "server/src/service/routers/user_select_router.cpp",
+    "server/src/service/spatialization/audio_spatialization_service.cpp",
+    "server/src/audio_spatialization_state_change_listener_proxy.cpp",
   ]
 
   defines = []
@@ -369,6 +372,7 @@ ohos_shared_library("audio_policy_client") {
     "client/src/audio_routing_manager_listener_stub.cpp",
     "client/src/audio_volume_group_info.cpp",
     "client/src/audio_volume_key_event_callback_stub.cpp",
+    "client/src/audio_spatialization_state_change_listener_stub.cpp",
   ]
 
   public_configs = [ ":audio_policy_client_config" ]
