sonic audio utils
Signed-off-by: wangtao <wangtao570@huawei.com>
Change-Id: I5b97fb21331588ca3f0a2a87e10658ba803f6912

--- a/frameworks/native/audioutils/BUILD.gn
+++ b/frameworks/native/audioutils/BUILD.gn
@@ -34,6 +34,7 @@ ohos_shared_library("audio_utils") {
     "./src/audio_channel_blend.cpp",
     "./src/audio_utils.cpp",
     "./src/volume_ramp.cpp",
+    "./src/sonic.c"
   ]
 
   external_deps = [
