--- a/frameworks/native/hdiadapter/sink/BUILD.gn
+++ b/frameworks/native/hdiadapter/sink/BUILD.gn
@@ -291,6 +291,42 @@ ohos_shared_library("offload_audio_renderer_sink") {
   subsystem_name = "multimedia"
 }
 
+ohos_shared_library("multichannel_audio_renderer_sink") {
+  sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+    blocklist = "../../../../cfi_blocklist.txt"
+  }
+  install_enable = true
+
+  sources = [ "multichannel/multichannel_audio_renderer_sink.cpp" ]
+
+  cflags = [ "-fPIC" ]
+  cflags += [ "-Wall" ]
+  cflags_cc = cflags
+
+  include_dirs = [
+    "common",
+    "../common/include",
+    "../../audioutils/include",
+    "../../../../interfaces/inner_api/native/audiocommon/include",
+  ]
+
+  deps = [ "../../audioutils:audio_utils" ]
+
+  external_deps = [
+    "c_utils:utils",
+    "drivers_interface_audio:audio_idl_headers",
+    "drivers_interface_audio:libaudio_proxy_1.0",
+    "hilog:libhilog",
+    "power_manager:powermgr_client",
+  ]
+
+  part_name = "audio_framework"
+  subsystem_name = "multimedia"
+}
+
 ohos_shared_library("renderer_sink_adapter") {
   sanitize = {
     cfi = true
