change speed in clinet
Signed-off-by: wangtao <wangtao570@huawei.com>
Change-Id: I4a2b39bc1fe368990646882bda91ed12b359041f

--- a/frameworks/native/audiorenderer/BUILD.gn
+++ b/frameworks/native/audiorenderer/BUILD.gn
@@ -22,6 +22,7 @@ config("audio_renderer_config") {
   include_dirs = [
     "./include",
     "../audiostream/include",
+    "../audioutils/include",
     "../../../interfaces/inner_api/native/audiorenderer/include",
     "../../../interfaces/inner_api/native/audiocommon/include",
     "../../../interfaces/inner_api/native/audiomanager/include",
