Revert "revert", and fix bug

--- a/frameworks/native/pulseaudio/modules/hdi/BUILD.gn
+++ b/frameworks/native/pulseaudio/modules/hdi/BUILD.gn
@@ -34,6 +34,7 @@ config("hdi_config") {
     "../../../hdiadapter/sink/file",
     "../../../hdiadapter/sink/primary",
     "../../../hdiadapter/sink/remote",
+    "../../../hdiadapter/sink/offload",
     "../../../hdiadapter/source/common",
     "../../../hdiadapter/source/file",
     "../../../hdiadapter/source/primary",
