低时延播放支持多流
Signed-off-by: l00456026 <lisiyu7@huawei.com>
Change-Id: If477d432e5ae1d61385804141ebc353dac996b83

--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -254,6 +254,7 @@ ohos_shared_library("audio_process_service") {
 
   sources = [
     "server/src/audio_endpoint.cpp",
+    "server/src/audio_endpoint_separate.cpp",
     "server/src/audio_process_in_server.cpp",
     "server/src/audio_process_stub.cpp",
     "server/src/audio_service.cpp",
