Make the sound playable
Signed-off-by: liyuhang <liyuhang24@huawei.com>
Change-Id: I57a05de62dc1f6419347e823346eef1f72d914b6

--- a/frameworks/native/examples/BUILD.gn
+++ b/frameworks/native/examples/BUILD.gn
@@ -17,7 +17,11 @@ import("../../../config.gni")
 
 ohos_executable("pa_stream_test") {
   install_enable = false
-
+  sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+  }
   cflags = [
     "-Wall",
     "-Werror",
