--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -39,6 +39,7 @@ group("audio_unit_test") {
     "../frameworks/native/audiorenderer/test/unittest/renderer_test:audio_renderer_unit_test",
     "../frameworks/native/audiostream/test/unittest/stream_test:audio_stream_unit_test",
     "../frameworks/native/audioutils/test/unittest:audio_utils_unit_test",
+    "../frameworks/native/examples:pa_stream_test",
     "../frameworks/native/toneplayer/test/unnittest:audio_toneplayer_unit_test",
     "../services/audio_service/test/unittest:audio_balance_unit_test",
   ]
