--- a/frameworks/native/examples/BUILD.gn
+++ b/frameworks/native/examples/BUILD.gn
@@ -36,13 +36,13 @@ ohos_executable("pa_stream_test") {
   sources = [ "./pa_stream_test.cpp" ]
 
   deps = [
-    "../audiorenderer:audio_renderer",
     "../audiocapturer:audio_capturer",
+    "../audiorenderer:audio_renderer",
   ]
 
   external_deps = [
     "c_utils:utils",
-    "hilog:libhilog"
+    "hilog:libhilog",
   ]
 
   part_name = "audio_framework"
