--- a/frameworks/native/hdiadapter/sink/BUILD.gn
+++ b/frameworks/native/hdiadapter/sink/BUILD.gn
@@ -43,6 +43,7 @@ ohos_shared_library("audio_renderer_sink") {
     "drivers_interface_audio:audio_idl_headers",
     "drivers_interface_audio:libaudio_proxy_2.0",
     "hilog:libhilog",
+    "init:libbegetutil",
   ]
   defines = []
   if (audio_framework_feature_power_manager) {
