--- a/frameworks/native/hdiadapter/sink/BUILD.gn
+++ b/frameworks/native/hdiadapter/sink/BUILD.gn
@@ -171,7 +171,12 @@ ohos_shared_library("remote_audio_renderer_sink") {
     "../devicemanager:audio_device_manager",
   ]
 
-  external_deps = [ "hilog:libhilog" ]
+  external_deps = [
+    "c_utils:utils",
+    "drivers_interface_distributed_audio:libdaudio_proxy_1.0",
+    "hilog:libhilog"
+  ]
+
   defines = []
   if (audio_framework_feature_daudio_enable) {
     defines += [ "FEATURE_DISTRIBUTE_AUDIO" ]
@@ -217,6 +222,7 @@ ohos_shared_library("remote_fast_audio_renderer_sink") {
 
   external_deps = [
     "c_utils:utils",
+    "drivers_interface_distributed_audio:libdaudio_proxy_1.0",    
     "hilog:libhilog",
   ]
   defines = []
