Audiofwk own HDF proxy directly
Signed-off-by: zhonglufu <zhonglufu@huawei.com>

--- a/frameworks/native/hdiadapter/source/BUILD.gn
+++ b/frameworks/native/hdiadapter/source/BUILD.gn
@@ -120,9 +120,8 @@ ohos_shared_library("remote_audio_capturer_source") {
   external_deps = [
     "c_utils:utils",
     "drivers_interface_distributed_audio:libdaudio_proxy_1.0",
-    "hilog:libhilog"
+    "hilog:libhilog",
   ]
-
   defines = []
   if (audio_framework_feature_daudio_enable) {
     defines += [ "FEATURE_DISTRIBUTE_AUDIO" ]
